<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">Dude, We\'s My Car?</string>
    <string name="album_dir">DudeApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="res_button_save">Save Location</string>
    <string name="res_button_navigate">Go To Location</string>
    <string name="res_button_photo">Take Photo</string>
    <string name="res_button_share">Share Photo</string>
    <string name="res_button_clear_photo">Clear Photo</string>
    <string name="res_id_button_clear_map">Clear Location</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyAPur1gJB2in8XVgk7jTJst479fbjhTyUc
    </string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="nav_info_tmp">Marker Info Will Should Here</string>
    <string name="res_button_BeginNav">Click To Begin Navigation</string>
    <string name="res_nav_distance">Distance To Parking: </string>

    <string name="title_activity_compass2">Compass2</string>

    <string name="title_activity_compass">CompassActivity</string>
    <string name="res_compass_azimuth">Direction To Parking</string>
    <string name="res_compass_distance">Distance To Parking</string>


</resources>
