<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gingers.yoad.car_v12.CompassActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_compass_azimuth"
        android:id="@+id/id_compass_direction_tv"
        android:textSize="25sp"
        android:layout_below="@+id/id_compass_button"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_compass_arrow"
        android:background="@drawable/arrow"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_button_BeginNav"
        android:id="@+id/id_compass_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_compass_distance"
        android:id="@+id/id_compass_distance"
        android:textSize="25sp"
        android:layout_below="@+id/id_compass_direction_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
